--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,12 @@
 	<packaging>pom</packaging>
 
 	<modules>
-		<module></module>
+		<module>services/ms-cliente</module>
+		<module>services/ms-inventario</module>
+		<module>services/ms-facturacion</module>
+		<module>services/ms-pago</module>
+		<module>services/ms-seguridad</module>
+		<module>services/ms-venta</module>
 	</modules>
 
 	<properties>
@@ -28,19 +33,13 @@
 
 	<dependencyManagement>
 		<dependencies>
-
 			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter</artifactId>
-				<version>${spring.boot.version}</version>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok</artifactId>
+				<version>1.18.30</version>
+				<scope>provided</scope>
 			</dependency>
-
-			<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-starter-test</artifactId>
-				<scope>test</scope>
-			</dependency>
-
 		</dependencies>
 	</dependencyManagement>
+
 </project>
