Configurando pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 	<properties>
 		<java.version>21</java.version>
 
-		<!-- Centralizar versiones -->
+		<!-- Centralizar versionessssss -->
 		<spring.boot.version>3.5.10</spring.boot.version>
 	</properties>
 
