--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,24 @@
-version: '3'
+version: '3.9'
 
 services:
-
-  ## Seria uno por cada microservicios
   postgres:
-    container_name: postgres_db_1
-    image: postgres
+    image: postgres:16
+    container_name: postgres_microservicios
+    restart: always
     environment:
       POSTGRES_USER: admin
-      POSTGRES_PASSWORD: admin
-      PGDATA: /var/lib/postgresql/data
+      POSTGRES_PASSWORD: admin123
     ports:
-      - 5432:5432
+      - "5434:5432"
     volumes:
-      - postgres:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
+      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
-      - microservices-net
-    restart: unless-stopped
-
-networks:
-    microservices-net:
-        driver: bridge
+      - micro_net
 
 volumes:
-  postgres:
+  postgres_data:
+
+networks:
+  micro_net:
+    driver: bridge
