--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<module>services/ms-pago</module>
 		<module>services/ms-seguridad</module>
 		<module>services/ms-venta</module>
+		<module>services/ms-reporte</module>
 
 		<module>services/microservice-config</module>
 		<module>services/microservice-eureka</module>
