--- a/services/microservice-config/src/main/resources/configurations/ms-sales.yml
+++ b/services/microservice-config/src/main/resources/configurations/ms-sales.yml
@@ -21,3 +21,7 @@ spring:
     client:
       service-url:
         defaultZone: http://localhost:8761/eureka
+
+sunat:
+  api:
+    token: eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJlbWFpbCI6InBhYmxvY2ZyMjJAZ21haWwuY29tIn0.4uhdCdLKQSUTX0Q0IKrUvkALxNdskd6tdiz8V5HjZPc
