--- a/services/microservice-config/src/main/resources/configurations/ms-seguridad.yml
+++ b/services/microservice-config/src/main/resources/configurations/ms-seguridad.yml
@@ -6,7 +6,7 @@ spring:
     name: ms-seguridad
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5434/seguridaddb
+    url: jdbc:postgresql://localhost:5434/keycloackdb
     username: admin
     password: admin123
     jpa:
@@ -14,10 +14,8 @@ spring:
         ddl-auto: update
       database: PostgreSQL
       database-platform: org.hibernate.dialect.PostgreSQLDialect
-
-  eureka:
-    instance:
-      hostname: localhost
-    client:
-      service-url:
-        defaultZone: http://localhost:8761/eureka
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8089/realms/keycloack-libreria
