Configuracion del proyecto common para archivos comunes , configurado en todos los proyectos

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,8 @@
 		<module>services/microservice-config</module>
 		<module>services/microservice-eureka</module>
 		<module>services/microservice-gateway</module>
+		<module>services/common</module>
+		<module>services/common</module>
 	</modules>
 
 	<properties>
